--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="title" content="Error 400: Invalid parameters">
     <meta name="viewport" content="width=device-width,max-scale=1">
+    <meta name="propeller" content="6a2de511f77379a33b596caa1c004b6a">
     <link rel="shortcut icon" href="/favicon.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5848679672347759"
      crossorigin="anonymous"></script>
