--- a/400.html
+++ b/400.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width,max-scale=1">
     <meta name="propeller" content="6a2de511f77379a33b596caa1c004b6a">
     <link rel="shortcut icon" href="/favicon.png">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5848679672347759"
-     crossorigin="anonymous"></script>
+    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5529398,document.body||document.documentElement)</script>
     <style>
       * {
         box-sizing: border-box
