--- a/400.html
+++ b/400.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,max-scale=1">
     <meta name="propeller" content="6a2de511f77379a33b596caa1c004b6a">
     <link rel="shortcut icon" href="/favicon.png">
-    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5529398,document.body||document.documentElement)</script>
+    <script async="async" data-cfasync="false" src="//arsnivyr.com/1?z=5529407"></script>
     <style>
       * {
         box-sizing: border-box
