--- a/404.html
+++ b/404.html
@@ -49,15 +49,9 @@
     </style>
   </head>
   <body>
-    <h1>Error 400: Invalid parameters</h1>
+    <h1>Error 404: Not found</h1>
     <hr>
     <h3>
-      <p>You may have encountered this error due to the following reasons:-</p>
-      <ol>
-        <li>{text/t} query is missing/invalid.</li>
-        <li>{lang/l} query is missing/invalid.</li>
-      </ol>
-      <hr>
       <p>The below form may help:-</p>
     </h3>
     <form action="/custom.mp3" method="get">
