--- a/400.html
+++ b/400.html
@@ -58,6 +58,8 @@
         <li>{lang/l} query is missing/invalid.</li>
       </ol>
       <hr>
+      <a href="/quote.mp3">Want to listen a random quote?</a>
+      <hr>
       <p>The below form may help:-</p>
     </h3>
     <form action="/custom.mp3" method="get">
