--- a/404.html
+++ b/404.html
@@ -51,6 +51,8 @@
   <body>
     <h1>Error 404: Not found</h1>
     <hr>
+    <a href="/quote.mp3">Want to listen a random quote?</a>
+    <hr>
     <h3>
       <p>The below form may help:-</p>
     </h3>
