--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A free tool to convert text to audio in 42 different languages and 9 distinct accents"/>
     <meta name="propeller" content="6a2de511f77379a33b596caa1c004b6a"/>
     <link rel="shortcut icon" href="/favicon.png"/>
-    <link rel="canonical" href="https://mp3quote.ga/"/>
+    <link rel="canonical" href="https://mp3quote.ga/index.html"/>
     <link rel="stylesheet" href="/style.css"/>
     <script defer src="/script.js"></script>
     <script defer async="async" data-cfasync="false" src="https://arsnivyr.com/1?z=5529407"></script>
