--- a/400.html
+++ b/400.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>mp3quote.ga - 400 Error</title>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="A free tool to convert text to audio in 42 different languages and 9 distinct accents"/>
     <meta name="propeller" content="6a2de511f77379a33b596caa1c004b6a"/>
