--- a/404.html
+++ b/404.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RJF551HJ9S"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TLF8NPW5T1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-RJF551HJ9S');
+  gtag('config', 'G-TLF8NPW5T1');
 </script>
     <title>mp3quote.ga - HOME</title>
     <meta charset="utf-8"/>
