--- a/400.html
+++ b/400.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TLF8NPW5T1"></script>
-<script>
+<script async defer src="https://www.googletagmanager.com/gtag/js?id=G-TLF8NPW5T1"></script>
+<script defer>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
