--- a/400.html
+++ b/400.html
@@ -15,12 +15,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="A free tool to convert text to audio in 42 different languages and 9 distinct accents"/>
     <link rel="shortcut icon" href="/favicon.png"/>
-    <link rel="canonical" href="https://mp3quote.ga/custom.mp3"/>
+    <link rel="canonical" href="/custom.mp3"/>
     <link rel="stylesheet" href="/style.css"/>
     <script defer src="/script.js"></script>
   </head>
   <body>
-    <h1>mp3quote.ga - 400 Error</h1>
+    <h1>mp3quote - 400 Error</h1>
     <div id="div">
       <p>You may have encountered this error due to the following reasons:-</p>
       <ol>
