--- a/404.html
+++ b/404.html
@@ -15,12 +15,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="A free tool to convert text to audio in 42 different languages and 9 distinct accents"/>
     <link rel="shortcut icon" href="/favicon.png"/>
-    <link rel="canonical" href="https://mp3quote.ga/index.html"/>
+    <link rel="canonical" href="/index.html"/>
     <link rel="stylesheet" href="/style.css"/>
     <script defer src="/script.js"></script>
 </head>
   <body>
-    <h1>mp3quote.ga - free tts service</h1>
+    <h1>mp3quote - free tts service</h1>
     <div id="div">
       <p>Want to listen a random quote?</p>
       <audio id="audio" controls></audio>
